# gitlab-ioc-scanner

./: .gitignore  README.md  gitlab_ioc_scanner.py  iocs.json  pyproject.toml  validate_ioc.py
gitlab_ioc_scanner/: __init__.py  __main__.py  cli.py  client.py  ioc_loader.py  reports.py  scanner.py
tests/: __init__.py  test_cli.py  test_client.py  test_main_module.py  test_reports.py  test_scanner.py  test_scanner_module.py
