[project]
name = "gitlab-ioc-scanner"
version = "2.3.0"
description = "Scan GitLab group projects for supply-chain IOC indicators"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Security Team" },
]
keywords = ["gitlab", "security", "ioc", "supply-chain", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# Zero external dependencies — stdlib only
dependencies = []

[project.scripts]
gitlab-ioc-scanner = "gitlab_ioc_scanner.cli:main"

[project.urls]
Repository = "https://gitlab.example.com/security/gitlab-ioc-scanner"
Issues = "https://gitlab.example.com/security/gitlab-ioc-scanner/-/issues"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitlab_ioc_scanner"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no print statements)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "S101",   # assert — acceptable in scripts
    "S310",   # urllib.request.urlopen audit — we validate URLs
    "S603",   # subprocess — not used
    "T201",   # print — we use logging, but print for --help epilog is fine
    "E501",   # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"cis_ioc_scanner.py" = ["ALL"]  # legacy script, don't lint
"cis_ioc_scanner.py.bak" = ["ALL"]  # archived original
"tests/*" = [
    "S101",   # assert is expected in tests
    "S105",   # hardcoded "password" — test tokens are not real secrets
    "S108",   # /tmp usage — tests use pytest tmp_path, this is fine
    "SIM115", # context manager for open() — one-liner reads in tests are fine
    "E402",   # import not at top — dynamic imports in __main__ tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
